spacing in phisical devices should now be fixed

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1720,8 +1720,8 @@ footer .subfooter-layout p {
 .corporation-data__images {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: baseline;
-  justify-content: space-between;
+  // align-items: baseline;
+  // justify-content: space-between;
   column-gap: var(--spacing-padding-md);
 }
 .corporation-data__text-wrapper {
